--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -115,57 +115,113 @@
   margin-top: 30px;
 }
 
-@media (max-width: 1050px) {
-  .footer .img-logo-footer {
-    width: 150px;
-  }
-  .footer-content-left h2,
-  .footer-content-right h2,
-  .footer-content-center h2 {
-    font-size: 18px;
-  }
-  .footer-content-left li {
-    font-size: 20px;
-  }
-}
-
-@media (max-width: 900px) {
+@media (max-width: 1281px) {
   .footer {
-    padding: 30px 2vw;
+    margin-top: 45px;
   }
   .footer-content {
-    grid-template-columns: 1fr 2fr 2fr 3fr;
-    gap: 12px;
+    flex-direction: row;
+    gap: 15px;
   }
   .footer .img-logo-footer {
-    width: 100px;
-    height: 100px;
-    margin-right: 20px;
+    width: 120px;
+    height: 120px;
+  }
+  .footer-content-left {
+    margin-left: -60px;
   }
   .footer-content-left h2,
-  .footer-content-right h2,
-  .footer-content-center h2 {
-    font-size: 20px;
+  .footer-content-center h2,
+  .footer-content-right h2 {
+    font-size: 1.4em;
+  }
+  .ul-icon-social {
+    margin-top: -20px;
+    gap: 5px;
+  }
+  .footer-content-center ul,
+  .address-links {
+    padding-left: 0px;
+    margin-top: -20px;
+  }
+  .footer-content-center li {
+    font-size: 0.9em;
+  }
+  .footer-content-right li {
+    font-size: 0.9em;
+  }
+  .facebook,
+  .tiktok,
+  .youtube {
+    width: 25px;
+    height: 25px;
+  }
+  .tiktok path {
+    width: 100%;
+    height: 100%;
+  }
+  .footer hr {
+    margin-top: -30px;
+  }
+  .footer-coppyright {
+    font-size: 0.9em;
+    margin-top: -15px;
   }
 }
 
-@media (max-width: 750px) {
+@media (max-width: 1025px) {
+  .footer {
+    margin-top: 45px;
+  }
   .footer-content {
-    display: flex;
-    flex-direction: column;
-    gap: 35px;
+    flex-direction: row;
+    gap: 15px;
   }
   .footer .img-logo-footer {
+    margin-left: 10px;
     width: 100px;
     height: 100px;
-    margin-right: 20px;
   }
-  .footer-copyright {
-    text-align: center;
+  .footer-content-left h2,
+  .footer-content-center h2,
+  .footer-content-right h2 {
+    font-size: 1.2em;
+  }
+  .ul-icon-social {
+    margin-top: -20px;
+    gap: 5px;
+  }
+  .footer-content-center ul,
+  .address-links {
+    padding-left: 0px;
+    margin-top: -20px;
+  }
+  .footer-content-center li {
+    font-size: 0.7em;
+  }
+  .footer-content-right li {
+    font-size: 0.7em;
+  }
+  .facebook,
+  .tiktok,
+  .youtube {
+    width: 25px;
+    height: 25px;
+  }
+  .tiktok path {
+    width: 100%;
+    height: 100%;
+  }
+  .footer hr {
+    margin-top: -30px;
+  }
+  .footer-coppyright {
+    font-size: 0.7em;
+    margin-top: -15px;
   }
 }
 
-@media (max-width: 376px) {
+@media (max-width: 821px) {
   .footer {
     margin-top: 15px;
   }
@@ -174,8 +230,113 @@
     gap: 15px;
   }
   .footer .img-logo-footer {
-    width: 50px;
-    height: 50px;
+    margin-left: 30px;
+    width: 70px;
+    height: 70px;
+  }
+  .footer-content-left h2,
+  .footer-content-center h2,
+  .footer-content-right h2 {
+    font-size: 0.7em;
+  }
+  .ul-icon-social {
+    margin-top: -20px;
+    gap: 5px;
+  }
+  .footer-content-center ul,
+  .address-links {
+    padding-left: 0px;
+    margin-top: -20px;
+  }
+  .footer-content-center li {
+    font-size: 0.5em;
+  }
+  .footer-content-right li {
+    font-size: 0.5em;
+  }
+  .facebook,
+  .tiktok,
+  .youtube {
+    width: 15px;
+    height: 15px;
+  }
+  .tiktok path {
+    width: 100%;
+    height: 100%;
+  }
+  .footer hr {
+    margin-top: -30px;
+  }
+  .footer-coppyright {
+    font-size: 0.7em;
+    margin-top: -15px;
+  }
+}
+
+@media (max-width: 769px) {
+  .footer {
+    margin-top: 15px;
+  }
+  .footer-content {
+    flex-direction: row;
+    gap: 15px;
+  }
+  .footer .img-logo-footer {
+    margin-left: 30px;
+    width: 70px;
+    height: 70px;
+  }
+  .footer-content-left h2,
+  .footer-content-center h2,
+  .footer-content-right h2 {
+    font-size: 0.7em;
+  }
+  .ul-icon-social {
+    margin-top: -20px;
+    gap: 5px;
+  }
+  .footer-content-center ul,
+  .address-links {
+    padding-left: 0px;
+    margin-top: -20px;
+  }
+  .footer-content-center li {
+    font-size: 0.5em;
+  }
+  .footer-content-right li {
+    font-size: 0.5em;
+  }
+  .facebook,
+  .tiktok,
+  .youtube {
+    width: 15px;
+    height: 15px;
+  }
+  .tiktok path {
+    width: 100%;
+    height: 100%;
+  }
+  .footer hr {
+    margin-top: -30px;
+  }
+  .footer-coppyright {
+    font-size: 0.7em;
+    margin-top: -15px;
+  }
+}
+
+@media (max-width: 541px) {
+  .footer {
+    margin-top: 15px;
+  }
+  .footer-content {
+    flex-direction: row;
+    gap: 15px;
+  }
+  .footer .img-logo-footer {
+    width: 65px;
+    height: 65px;
+    margin-left: -15px;
   }
   .footer-content-left h2,
   .footer-content-center h2,
@@ -197,7 +358,114 @@
   .footer-content-right li {
     font-size: 0.5em;
   }
-  .facebook, .tiktok, .youtube {
+  .facebook,
+  .tiktok,
+  .youtube {
+    width: 15px;
+    height: 15px;
+  }
+  .tiktok path {
+    width: 100%;
+    height: 100%;
+  }
+  .footer hr {
+    margin-top: -30px;
+  }
+  .footer-coppyright {
+    font-size: 0.7em;
+    margin-top: -15px;
+  }
+}
+
+@media (max-width: 431px) {
+  .footer {
+    margin-top: 15px;
+  }
+  .footer-content {
+    flex-direction: row;
+    gap: 15px;
+  }
+  .footer .img-logo-footer {
+    width: 50px;
+    height: 50px;
+  }
+  .footer-content-left h2,
+  .footer-content-center h2,
+  .footer-content-right h2 {
+    font-size: 0.7em;
+  }
+  .footer-content-left {
+    margin-left: -10px;
+  }
+  .ul-icon-social {
+    margin-top: -20px;
+    gap: 5px;
+  }
+  .footer-content-center ul,
+  .footer-content-right ul {
+    padding-left: 0px;
+    margin-top: -20px;
+  }
+  .footer-content-center li {
+    font-size: 0.5em;
+  }
+  .footer-content-right li {
+    font-size: 0.5em;
+  }
+  .facebook,
+  .tiktok,
+  .youtube {
+    width: 15px;
+    height: 15px;
+  }
+  .tiktok path {
+    width: 100%;
+    height: 100%;
+  }
+  .footer hr {
+    margin-top: -30px;
+  }
+  .footer-coppyright {
+    font-size: 0.7em;
+    margin-top: -15px;
+  }
+}
+
+@media (max-width: 376px) {
+  .footer {
+    margin-top: 15px;
+  }
+  .footer-content {
+    flex-direction: row;
+    gap: 15px;
+  }
+  .footer .img-logo-footer {
+    width: 50px;
+    height: 50px;
+  }
+  .footer-content-left h2,
+  .footer-content-center h2,
+  .footer-content-right h2 {
+    font-size: 0.5em;
+  }
+  .ul-icon-social {
+    margin-top: -20px;
+    gap: 5px;
+  }
+  .footer-content-center ul,
+  .footer-content-right ul {
+    padding-left: 0px;
+    margin-top: -20px;
+  }
+  .footer-content-center li {
+    font-size: 0.3em;
+  }
+  .footer-content-right li {
+    font-size: 0.3em;
+  }
+  .facebook,
+  .tiktok,
+  .youtube {
     width: 15px;
     height: 15px;
   }
