--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,42 @@ body {
     overflow-x: hidden;
 }
 
+@media (max-width: 1280px) {
+    body {
+        padding-top: 110px;
+    }
+}
+
+@media (max-width: 1025px) {
+    body {
+        padding-top: 120px;
+    }
+}
+
+@media (max-width: 854px) {
+    body {
+        padding-top: 85px;
+    }
+}
+
+@media (max-width: 821px) {
+    body {
+        padding-top: 85px;
+    }
+}
+
+@media (max-width: 769px) {
+    body {
+        padding-top: 89px;
+    }
+}
+
+@media (max-width: 416px) {
+    body {
+        padding-top: 61px;
+    }
+}
+
 @media (max-width: 376px) {
     body {
         padding-top: 61px;
@@ -33,6 +69,12 @@ a {
 .app {
     width: 80%;
     margin: auto;
+}
+
+@media (max-width: 1440px) {
+    .app {
+        margin-top: 25px;
+    }
 }
 
 .fade-enter {
