--- a/src/page/food_card/Food_card.css
+++ b/src/page/food_card/Food_card.css
@@ -2,7 +2,6 @@
   width: 100%;
   height: 165px;
   justify-items: center;
-
 }
 
 .image-menu-contents {
@@ -147,6 +146,85 @@
 .bt-buy-now:hover {
   background-color: #333;
   color: #fff;
+}
+
+@media (max-width: 431px) {
+  .food-page-container {
+    flex-direction: column; /* Chuyển bố cục thành cột cho màn hình nhỏ */
+  }
+
+  .category-section {
+    flex-direction: row; /* Sắp xếp các mục theo hàng ngang */
+    justify-content: flex-start; /* Căn trái các mục */
+    align-items: center; /* Căn giữa theo chiều dọc */
+    width: 100%; /* Chiếm toàn bộ chiều rộng màn hình */
+    max-width: 100%; /* Loại bỏ giới hạn chiều rộng */
+    overflow-x: auto; /* Hiển thị thanh cuộn ngang nếu danh mục quá dài */
+    overflow-y: hidden; /* Loại bỏ cuộn dọc */
+    height: 50px;
+    margin-top: -35px;
+    padding-left: 0px !important;
+  }
+
+  .category-list {
+    display: flex; /* Hiển thị theo hàng ngang */
+    flex-wrap: nowrap; /* Không cho các mục xuống dòng */
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    gap: 10px; /* Khoảng cách giữa các mục */
+    white-space: nowrap; /* Đảm bảo text không xuống dòng */
+  }
+
+  .category-list li {
+    padding: 5px 10px; /* Giảm padding để phù hợp màn hình nhỏ */
+    cursor: pointer;
+    background-color: #ffffff; /* Màu nền */
+    border-radius: 5px; /* Bo góc */
+    transition: background-color 0.2s ease-in-out;
+    white-space: nowrap; /* Đảm bảo text không xuống dòng */
+    font-size: 12px; /* Giảm kích thước font chữ */
+    text-align: center;
+  }
+
+  .category-list li:hover {
+    background-color: tomato;
+    color: white;
+    font-weight: bold;
+  }
+
+  .category-list li:active {
+    background-color: darkred;
+    color: white;
+  }
+
+  .food-page-container {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  }
+
+  .food-grid {
+    padding: 0;
+    border-left: none;
+    width: 80vw;
+    gap: 5px;
+    justify-content: space-between;
+    margin-bottom: 5px;
+  }
+  
+  .food-card {
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    width: 39vw;
+    height: 325px;
+    overflow: hidden;
+    text-align: center;
+    box-sizing: border-box; /* Bao gồm padding và border */
+  }
+
+  .food-item-price, .food-item-quantity{
+    font-size: 0.9em;
+  }
 }
 
 @media (max-width: 376px) {
