--- a/src/page/invoice/Invoice.css
+++ b/src/page/invoice/Invoice.css
@@ -55,9 +55,8 @@
   align-items: center;
   margin-bottom: 10px;
   padding: 5px 20px;
-  flex-wrap: wrap;  /* Đảm bảo các sản phẩm không bị cắt ngắn */
+  flex-wrap: wrap;
 }
-
 
 .order-info {
   display: flex;
@@ -98,7 +97,6 @@
   font-weight: bold;
 }
 
-
 .contact-seller-btn {
   background: red;
   color: #fff;
@@ -130,4 +128,82 @@
   border-bottom: 2px solid red;
   color: red;
   font-weight: bold;
+}
+
+@media (max-width: 431px) {
+  .order-tabs {
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 5px;
+  }
+
+  .tab {
+    padding: 8px;
+    font-size: 12px;
+  }
+
+  .order-card {
+    padding: 10px;
+  }
+
+  .order-summary,
+  .total-amount-size,
+  .status {
+    font-size: 0.5em;
+  }
+
+  .total {
+    padding-left: 0rem !important;
+  }
+
+  .status {
+    padding-right: 0rem !important;
+    display: flex;
+  }
+
+  .order-item {
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+    border-bottom: 1px solid #f0f0f0;
+  }
+
+  .order-info {
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    gap: 10px;
+  }
+
+  .order-image {
+    width: 50px;
+    height: 50px;
+  }
+
+  .order-title {
+    font-size: 12px;
+  }
+
+  .order-quantity {
+    font-size: 12px;
+  }
+
+  .order-price {
+    font-size: 12px;
+    margin-left: auto;
+    margin-top: -30px;
+  }
+
+  .total-amount-size {
+    font-size: 14px;
+    text-align: center;
+    margin-top: 10px;
+  }
+
+  .contact-seller-btn {
+    width: 100%;
+    text-align: center;
+    padding: 10px;
+    font-size: 14px;
+  }
 }
