--- a/src/page/order/Order.css
+++ b/src/page/order/Order.css
@@ -99,19 +99,20 @@
   padding: 2px 12px;
 }
 
-.form-group-voucher input:focus, .form-group-note input:focus  {
+.form-group-voucher input:focus,
+.form-group-note input:focus {
   border: 1px solid tomato !important;
   outline: none;
 }
 
-.form-group-voucher button{
-    width: fit-content;
-    padding: 4px 15px;
-    background-color: #555;
-    color: white;
-    border: 1px solid;
-    font-size: 0.9rem;
-    border-radius: 3px;
+.form-group-voucher button {
+  width: fit-content;
+  padding: 4px 15px;
+  background-color: #555;
+  color: white;
+  border: 1px solid;
+  font-size: 0.9rem;
+  border-radius: 3px;
 }
 
 .form-group-voucher input::placeholder {
@@ -120,11 +121,11 @@
 }
 
 .form-group-voucher button:hover {
-    background-color: #8b8b8b;
+  background-color: #8b8b8b;
 }
 
 .form-group-voucher button:active {
-    background-color: #555;
+  background-color: #555;
 }
 
 .form-control:focus {
@@ -267,4 +268,162 @@
   border-radius: 8px;
   width: 500px;
   text-align: center;
+}
+
+@media (max-width: 320px) {
+  .general-order {
+    flex-direction: column;
+    align-items: stretch;
+    margin: auto;
+  }
+  .col-5,
+  .col-6 {
+    width: 100%;
+  }
+  .checkout-form-wrapper {
+    padding: 3px 5px !important;
+  }
+  .website-name {
+    font-size: 0.7em;
+    width: 100% !important;
+    margin-top: 5px;
+    margin-bottom: -9px !important;
+  }
+  .font-size-top {
+    font-size: 0.7em;
+  }
+  .ic_edit_order {
+    width: 15px;
+    height: 15px;
+  }
+  .info-customer {
+    padding: 0px 5px;
+    margin-top: -15px;
+  }
+  .form-group label,
+  .form-group-note label {
+    font-size: 0.7em;
+  }
+  .form-group {
+    margin-top: 5px !important;
+  }
+  .form-control {
+    font-size: 0.6em;
+    padding: 0px 5px;
+  }
+  .form-group-note {
+    margin-top: 5px !important;
+  }
+  .form-group-note .form-control-note {
+    font-size: 0.7em !important;
+    padding: 2px 5px;
+    height: auto;
+  }
+  .form-group-note textarea::placeholder {
+    font-size: 0.9em !important;
+  }
+  .form-group-note textarea {
+    font-size: 0.7em !important;
+  }
+  .form-group-voucher {
+    margin-top: 0 !important;
+  }
+  .form-group-voucher input::placeholder {
+    font-size: 0.9em !important;
+    color: #888;
+  }
+  .form-group-voucher input {
+    font-size: 0.7em !important;
+    height: auto;
+  }
+  .form-group-voucher .form-control-coupon {
+    padding: 0px 5px;
+    margin-top: 0px !important;
+  }
+  .form-group-voucher button {
+    font-size: 0.5em;
+  }
+  .payment-method {
+    margin-top: 15px !important;
+  }
+  .payment-method h5 {
+    font-size: 0.8em;
+  }
+  .form-check {
+    font-size: 0.7em;
+  }
+  .button-go-to-cart button {
+    padding: 2px 5px;
+    font-size: 0.7em;
+  }
+  .button-go-to-cart {
+    margin-top: -25px;
+  }
+  .offset-1 {
+    margin: 15px auto;
+  }
+  .name-product-order,
+  .price-checkout {
+    font-size: 0.7em;
+  }
+  .name-product-order {
+  }
+  .container-xxl {
+    padding: 0;
+  }
+  .check-out-img {
+    height: auto;
+  }
+  .checkout-badge {
+    width: 15px;
+    height: 15px;
+  }
+  .text-quantity {
+    font-size: 0.7em;
+    width: 15px !important;
+    height: 15px;
+    margin-top: -4px;
+    margin-left: -7px;
+  }
+  .name-product {
+    margin-top: 0;
+    font-size: 0.8em;
+    width: 3rem;
+    padding-top: 2px !important;
+  }
+  .total-price-one {
+    font-size: 0.8em;
+    padding: 0px 0px !important;
+  }
+  .price-of-product {
+    font-size: 0.8em;
+    padding-top: 0 !important;
+    margin: 2px 0px !important;
+    width: 100%;
+  }
+  .total-price-end h4,
+  .total-price-end h5 {
+    font-size: 0.7em;
+  }
+  .total-coupon h4,
+  .total-coupon h5 {
+    font-size: 0.7em;
+  }
+  .total-amount h4,
+  .total-amount h5 {
+    font-size: 0.7em;
+  }
+  .total-amount {
+    padding: 0px 3px !important;
+  }
+  .button-order {
+    margin: 8px 0px!important;
+  }
+  .button-order button {
+    font-size: 0.7em;
+    padding: 5px 10px !important;
+  }
+  .checkout-wrapper {
+    padding: 0px 0px !important;
+  }
 }
