--- a/src/page/blog/Blog.css
+++ b/src/page/blog/Blog.css
@@ -4,215 +4,469 @@
 }
 
 .main-content {
-padding: 20px;
-max-width: 900px;
-margin: 0 auto;
+  padding: 20px;
+  max-width: 900px;
+  margin: 0 auto;
 }
 
 /* Header */
 .header-blog {
-display: flex;
-align-items: center;
-justify-content: space-between;
-background-color: #3d4446;
-padding: 10px 20px;
-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #3d4446;
+  padding: 10px 20px;
+  color: #fff;
 }
 
 .logo {
-font-size: 1.5em;
+  font-size: 1.3em;
 }
 
 .search-bar {
-flex: 1;
-margin: 0 20px;
-padding: 5px 10px;
-border-radius: 4px;
-border: none;
+  flex: 1;
+  width: 50vw;
+  margin: 0 20px;
+  padding: 5px 10px;
+  border-radius: 4px;
+  border: none;
 }
 
 .search-bar:focus {
-outline: none;
+  outline: none;
 }
 
 /* Saved Items Button */
 .saved-items button {
-padding: 5px 10px;
-border-radius: 4px;
-outline: none;
-border: 1px solid white;
-background-color: #3d4446;
-color: white;
-font-weight: 300;
-font-size: 0.9em;
+  padding: 5px 10px;
+  border-radius: 4px;
+  outline: none;
+  border: 1px solid white;
+  background-color: #3d4446;
+  color: white;
+  font-weight: 300;
+  font-size: 0.9em;
 }
 
 .saved-items button:hover {
-border: 1px solid white;
-background-color: white;
-color: #333;
+  border: 1px solid white;
+  background-color: white;
+  color: #333;
 }
 
 .saved-items button:active {
-border: 1px solid white;
-background-color: #3d4446;
-color: white;
+  border: 1px solid white;
+  background-color: #3d4446;
+  color: white;
+}
+
+.tag-input {
+  display: none;
 }
 
 /* Tag Input */
-.tag-input input {
-padding: 5px 10px;
-border-radius: 4px;
-border: 1px solid #ccc;
+/* .tag-input input {
+  padding: 5px 10px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
 }
 
 .tags-list {
-margin-top: 5px;
+  margin-top: 5px;
 }
 
 .tag {
-display: inline-flex;
-align-items: center;
-margin-right: 10px;
-background-color: #e1e1e1;
-padding: 5px 10px;
-border-radius: 20px;
-font-size: 0.9em;
+  display: inline-flex;
+  align-items: center;
+  margin-right: 10px;
+  background-color: #e1e1e1;
+  padding: 5px 10px;
+  border-radius: 20px;
+  font-size: 0.9em;
 }
 
 .remove-tag {
-background-color: transparent;
-border: none;
-color: red;
-font-size: 1em;
-margin-left: 5px;
-cursor: pointer;
+  background-color: transparent;
+  border: none;
+  color: red;
+  font-size: 1em;
+  margin-left: 5px;
+  cursor: pointer;
 }
 
 .remove-tag:hover {
-color: darkred;
-}
+  color: darkred;
+} */
 
 /* Save Dish Button */
 .button-save-dish {
-font-size: 0.9em;
-background-color: #219dfb !important;
+  font-size: 0.9em;
+  background-color: #219dfb !important;
 }
 
 .button-save-dish:hover {
-background-color: #63bbff !important;
+  background-color: #63bbff !important;
 }
 
 .button-save-dish:active {
-background-color: #219dfb !important;
+  background-color: #219dfb !important;
 }
 
 .button-save-dish.saved {
-background-color: #00b894 !important;
+  background-color: #00b894 !important;
 }
 
 .button-save-dish.saved:hover {
-background-color: #019875 !important;
+  background-color: #019875 !important;
 }
 
 .button-save-dish.saved:active {
-background-color: #00b894 !important;
+  background-color: #00b894 !important;
 }
 
 /* Blog List */
 .blog-list {
-display: flex;
-flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .blog-post {
-display: flex;
-margin-bottom: 20px;
-border-bottom: 1px solid #dfe6e9;
-padding-bottom: 20px;
+  display: flex;
+  margin-bottom: 20px;
+  border-bottom: 1px solid #dfe6e9;
+  padding-bottom: 20px;
 }
 
 .post-image {
-width: 200px;
-height: 150px;
-object-fit: cover;
-margin-right: 20px;
-border-radius: 8px;
+  width: 200px;
+  height: 150px;
+  object-fit: cover;
+  margin-right: 20px;
+  border-radius: 8px;
 }
 
 .post-content {
-flex: 1;
+  flex: 1;
 }
 
 .post-content h2 {
-margin: 0 0 10px;
-color: #333;
+  margin: 0 0 10px;
+  color: #333;
 }
 
 .post-content p {
-color: #5c6162;
+  color: #5c6162;
 }
 
 .post-content button {
-padding: 8px 16px;
-background-color: #00b894;
-border: none;
-color: #fff;
-border-radius: 4px;
-cursor: pointer;
-margin-top: 10px;
+  padding: 8px 16px;
+  background-color: #00b894;
+  border: none;
+  color: #fff;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-top: 10px;
 }
 
 .post-content button:hover {
-background-color: #019875;
+  background-color: #019875;
 }
 
 /* Related Posts */
 .related-posts {
-margin-top: 40px;
-padding-top: 20px;
-border-top: 1px solid #dfe6e9;
+  margin-top: 40px;
+  padding-top: 20px;
+  border-top: 1px solid #dfe6e9;
 }
 
 .related-posts h3 {
-margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .related-posts ul {
-list-style: none;
-padding: 0;
+  list-style: none;
+  padding: 0;
 }
 
 .related-posts li {
-margin-bottom: 5px;
+  margin-bottom: 5px;
 }
 
 .related-posts a {
-text-decoration: none;
-color: #0984e3;
+  text-decoration: none;
+  color: #0984e3;
 }
 
 .related-posts a:hover {
-text-decoration: underline;
+  text-decoration: underline;
 }
 
-@media (max-width: 431px) {
+@media (max-width: 1024px) {
   .header-blog {
-    padding: 5px 5px;
+    padding: 10px;
+  }
+  .logo {
+    font-size: 0.9em;
+    text-align: center;
+    margin-left: 5px;
+  }
+  .search-container-blog input {
+    font-size: 0.9em;
+    padding: 15px 10px;
+  }
+  .search-bar {
+    width: 50vw;
+    height: 3vh;
+    font-size: 1em;
+    margin: 0px 5px;
+    padding: 10px 5px;
+  }
+  .search-bar::placeholder {
+    font-size: 0.9em;
+  }
+  .tag-input {
+    display: none;
+  }
+  .saved-items {
+    margin: 5px;
+  }
+  .saved-items button {
+    font-size: 0.7em !important;
+    padding: 5px 7px;
+  }
+  .main-content {
+    padding: 7px;
+  }
+  .post-image {
+    width: 90px;
+    height: 80px;
+    object-fit: fill;
+  }
+  .post-content h2 {
+    font-size: 0.9em;
+    font-weight: 800;
+    margin: 0px 0px 5px;
+  }
+  .post-content p {
+    font-size: 0.9em;
+  }
+  .post-content button {
+    padding: 5px 15px;
+    font-size: 0.8em;
+    margin-top: 5px;
+  }
+}
+
+@media (max-width: 800px) {
+  .header-blog {
+    padding: 10px;
+  }
+  .logo {
+    font-size: 0.6em;
+    text-align: center;
+    margin-left: 5px;
+  }
+  .search-container-blog input {
+    font-size: 0.7em;
+    padding-bottom: 11px;
+  }
+  .search-bar {
+    width: 50vw;
+    height: 4vh;
+    font-size: 1em;
+    margin: 0px 5px;
+    padding: 10px 5px;
+  }
+  .search-bar::placeholder {
+    font-size: 0.9em;
+  }
+  .tag-input {
+    display: none;
+  }
+  .saved-items {
+    margin: 5px;
+  }
+  .saved-items button {
+    font-size: 0.6em !important;
+    padding: 3px 3px;
+  }
+  .main-content {
+    padding: 7px;
+  }
+  .post-image {
+    width: 90px;
+    height: 80px;
+    object-fit: fill;
+  }
+  .post-content h2 {
+    font-size: 0.8em;
+    font-weight: 800;
+    margin: 0px 0px 5px;
+  }
+  .post-content p {
+    font-size: 0.7em;
+  }
+  .post-content button {
+    padding: 4px 5px;
+    font-size: 0.7em;
+    margin-top: 5px;
+  }
+}
+
+@media (max-width: 600px) {
+  .header-blog {
+    padding: 0px;
   }
   .logo {
     font-size: 0.5em;
+    text-align: center;
+    margin-left: 5px;
+  }
+  .search-container-blog input {
+    font-size: 0.7em;
+    padding-bottom: 11px;
+  }
+  .search-bar {
+    width: 48vw;
+    height: 3vh;
+    font-size: 0.9em;
+    margin: 0px 5px;
+    padding: 10px 5px;
+  }
+  .search-bar::placeholder {
+    font-size: 0.7em;
+  }
+  .tag-input {
+    display: none;
+  }
+  .saved-items {
+    margin: 5px;
+  }
+  .saved-items button {
+    font-size: 0.5em !important;
+    padding: 5px 3px;
+  }
+  .main-content {
+    padding: 7px;
+  }
+  .post-image {
+    width: 70px;
+    height: 60px;
+    object-fit: fill;
+  }
+  .post-content h2 {
+    font-size: 0.7em;
+    font-weight: 800;
+    margin: 0px 0px 5px;
+  }
+  .post-content p {
+    font-size: 0.6em;
+  }
+  .post-content button {
+    padding: 4px 5px;
+    font-size: 0.6em;
+    margin-top: 5px;
+  }
+}
+
+@media (max-width: 480px) {
+  .header-blog {
+    padding: 0px;
+  }
+  .logo {
+    font-size: 0.5em;
+    text-align: center;
   }
   .search-bar {
     width: 45vw;
     height: 3vh;
     font-size: 0.9em;
     margin: 0px 5px;
+    padding: 10px 5px;
+  }
+  .search-bar::placeholder {
+    font-size: 0.7em;
   }
   .tag-input {
     display: none;
   }
+  .saved-items {
+    margin: 5px;
+  }
   .saved-items button {
-    font-size: 0.5em !important;
+    font-size: 0.4em !important;
+    padding: 5px 5px;
+  }
+  .main-content {
+    padding: 7px;
+  }
+  .post-image {
+    width: 70px;
+    height: 60px;
+    object-fit: fill;
+  }
+  .post-content h2 {
+    font-size: 0.7em;
+    font-weight: 800;
+    margin: 0px 0px 5px;
+  }
+  .post-content p {
+    font-size: 0.6em;
+  }
+  .post-content button {
+    padding: 4px 5px;
+    font-size: 0.6em;
+    margin-top: 5px;
+  }
+}
+
+@media (max-width: 320px) {
+  .header-blog {
+    padding: 0px;
+  }
+  .logo {
+    font-size: 0.5em;
+    margin-left: 5px;
+  }
+  .search-bar {
+    width: 45vw;
+    height: 3vh;
+    font-size: 0.9em;
+    margin: 0px 5px;
+    padding: 5px 5px;
+  }
+  .search-bar::placeholder {
+    font-size: 0.7em;
+  }
+  .tag-input {
+    display: none;
+  }
+  .saved-items {
+    margin: 5px;
+  }
+  .saved-items button {
+    font-size: 0.4em !important;
+    padding: 5px 5px;
+  }
+  .main-content {
+    padding: 7px;
+  }
+  .post-image {
+    width: 70px;
+    height: 60px;
+    object-fit: fill;
+  }
+  .post-content h2 {
+    font-size: 0.7em;
+    font-weight: 800;
+    margin: 0px 0px 5px;
+  }
+  .post-content p {
+    font-size: 0.6em;
+  }
+  .post-content button {
+    padding: 4px 5px;
+    font-size: 0.6em;
+    margin-top: 5px;
   }
 }
