--- a/src/page/order/Order.css
+++ b/src/page/order/Order.css
@@ -35,16 +35,16 @@
 }
 
 .checkout-badge {
-  top: -10px;
+  top: -5px;
   right: -10px;
   background-color: #4c4c4c;
-  width: 35px;
-  height: 35px;
+  width: 25px;
+  height: 25px;
   border-radius: 50%;
 }
 
 .text-quantity {
-  margin-top: 2px;
+  margin-top: -2px;
 }
 
 .name-product-order {
@@ -268,6 +268,629 @@
   border-radius: 8px;
   width: 500px;
   text-align: center;
+}
+
+@media (max-width: 1024px) {
+  .checkout-form-wrapper {
+    padding: 3px 5px !important;
+  }
+  .website-name {
+    font-size: 0.8em;
+    width: 100% !important;
+    margin-top: 5px;
+    margin-bottom: -9px !important;
+  }
+  .font-size-top {
+    font-size: 0.8em;
+  }
+  .ic_edit_order {
+    width: 15px;
+    height: 15px;
+  }
+  .info-customer {
+    padding: 0px 5px;
+    margin-top: -15px;
+  }
+  .form-group label,
+  .form-group-note label {
+    font-size: 0.8em;
+  }
+  .form-group {
+    margin-top: 5px !important;
+  }
+  .form-control {
+    font-size: 0.7em;
+    padding: 0px 5px;
+  }
+  .form-group-note {
+    margin-top: 5px !important;
+  }
+  .form-group-note .form-control-note {
+    font-size: 0.8em !important;
+    padding: 2px 5px;
+    height: auto;
+  }
+  .form-group-note textarea::placeholder {
+    font-size: 0.9em !important;
+  }
+  .form-group-note textarea {
+    font-size: 0.8em !important;
+  }
+  .form-group-voucher {
+    margin-top: 0 !important;
+  }
+  .form-group-voucher input::placeholder {
+    font-size: 0.9em !important;
+    color: #888;
+  }
+  .form-group-voucher input {
+    font-size: 0.8em !important;
+    height: auto;
+  }
+  .form-group-voucher .form-control-coupon {
+    padding: 0px 5px;
+    margin-top: 0px !important;
+  }
+  .form-group-voucher button {
+    font-size: 0.6em;
+  }
+  .payment-method {
+    margin-top: 15px !important;
+  }
+  .payment-method h5 {
+    font-size: 0.9em;
+  }
+  .form-check {
+    font-size: 0.8em;
+  }
+  .button-go-to-cart button {
+    padding: 2px 5px;
+    font-size: 0.8em;
+  }
+  .button-go-to-cart {
+    margin-top: -25px;
+  }
+  .offset-1 {
+    margin-top: 0px;
+    margin-right: 0px;
+  }
+  .name-product-order,
+  .price-checkout {
+    font-size: 0.8em;
+  }
+  .name-product-order {
+  }
+  .container-xxl {
+    padding: 0;
+  }
+  .check-out-img {
+    width: 80%;
+    height: 50px;
+  }
+  .checkout-badge {
+    width: 18px;
+    height: 18px;
+    left: 50px
+  }
+  .text-quantity {
+    font-size: 0.8em;
+    width: 15px !important;
+    height: 15px;
+    margin-top: -3px;
+    margin-left: -6px;
+  }
+  .name-product {
+    margin-top: 2px;
+    font-size: 0.8em;
+    width: 7rem;
+  }
+  .total-price-one {
+    font-size: 0.8em;
+    margin-top: 7px;
+  }
+  .price-of-product {
+    font-size: 0.8em;
+    margin: 2px 0px !important;
+    width: 100%;
+  }
+  .total-price-end h4,
+  .total-price-end h5 {
+    font-size: 0.7em;
+  }
+  .total-coupon h4,
+  .total-coupon h5 {
+    font-size: 0.7em;
+  }
+  .total-amount h4,
+  .total-amount h5 {
+    font-size: 0.7em;
+  }
+  .total-amount {
+    padding: 0px 3px !important;
+  }
+  .button-order {
+    margin: 8px 0px!important;
+  }
+  .button-order button {
+    font-size: 0.7em;
+    padding: 5px 10px !important;
+  }
+  .checkout-wrapper {
+    padding: 0px 0px !important;
+  }
+}
+
+@media (max-width: 800px) {
+  .general-order {
+    flex-direction: column;
+    align-items: stretch;
+    margin: auto;
+  }
+  .col-5,
+  .col-6 {
+    width: 100%;
+  }
+  .checkout-form-wrapper {
+    padding: 3px 5px !important;
+  }
+  .website-name {
+    font-size: 0.8em;
+    width: 100% !important;
+    margin-top: 5px;
+    margin-bottom: -9px !important;
+  }
+  .font-size-top {
+    font-size: 0.8em;
+  }
+  .ic_edit_order {
+    width: 15px;
+    height: 15px;
+  }
+  .info-customer {
+    padding: 0px 5px;
+    margin-top: -15px;
+  }
+  .form-group label,
+  .form-group-note label {
+    font-size: 0.8em;
+  }
+  .form-group {
+    margin-top: 5px !important;
+  }
+  .form-control {
+    font-size: 0.7em;
+    padding: 0px 5px;
+  }
+  .form-group-note {
+    margin-top: 5px !important;
+  }
+  .form-group-note .form-control-note {
+    font-size: 0.8em !important;
+    padding: 2px 5px;
+    height: auto;
+  }
+  .form-group-note textarea::placeholder {
+    font-size: 0.9em !important;
+  }
+  .form-group-note textarea {
+    font-size: 0.8em !important;
+  }
+  .form-group-voucher {
+    margin-top: 0 !important;
+  }
+  .form-group-voucher input::placeholder {
+    font-size: 0.9em !important;
+    color: #888;
+  }
+  .form-group-voucher input {
+    font-size: 0.8em !important;
+    height: auto;
+  }
+  .form-group-voucher .form-control-coupon {
+    padding: 0px 5px;
+    margin-top: 0px !important;
+  }
+  .form-group-voucher button {
+    font-size: 0.6em;
+  }
+  .payment-method {
+    margin-top: 15px !important;
+  }
+  .payment-method h5 {
+    font-size: 0.9em;
+  }
+  .form-check {
+    font-size: 0.8em;
+  }
+  .button-go-to-cart button {
+    padding: 2px 5px;
+    font-size: 0.8em;
+  }
+  .button-go-to-cart {
+    margin-top: -25px;
+  }
+  .offset-1 {
+    margin: 15px auto;
+  }
+  .name-product-order,
+  .price-checkout {
+    font-size: 0.8em;
+  }
+  .name-product-order {
+  }
+  .container-xxl {
+    padding: 0;
+  }
+  .check-out-img {
+    width: 80%;
+    height: 50px;
+  }
+  .checkout-badge {
+    width: 18px;
+    height: 18px;
+    left: 50px
+  }
+  .text-quantity {
+    font-size: 0.8em;
+    width: 15px !important;
+    height: 15px;
+    margin-top: -3px;
+    margin-left: -6px;
+  }
+  .name-product {
+    margin-top: 2px;
+    font-size: 0.8em;
+    width: 7rem;
+  }
+  .total-price-one {
+    font-size: 0.8em;
+    margin-top: 7px;
+  }
+  .price-of-product {
+    font-size: 0.8em;
+    margin: 2px 0px !important;
+    width: 100%;
+  }
+  .total-price-end h4,
+  .total-price-end h5 {
+    font-size: 0.7em;
+  }
+  .total-coupon h4,
+  .total-coupon h5 {
+    font-size: 0.7em;
+  }
+  .total-amount h4,
+  .total-amount h5 {
+    font-size: 0.7em;
+  }
+  .total-amount {
+    padding: 0px 3px !important;
+  }
+  .button-order {
+    margin: 8px 0px!important;
+  }
+  .button-order button {
+    font-size: 0.7em;
+    padding: 5px 10px !important;
+  }
+  .checkout-wrapper {
+    padding: 0px 0px !important;
+  }
+}
+
+@media (max-width: 600px) {
+  .general-order {
+    flex-direction: column;
+    align-items: stretch;
+    margin: auto;
+  }
+  .col-5,
+  .col-6 {
+    width: 100%;
+  }
+  .checkout-form-wrapper {
+    padding: 3px 5px !important;
+  }
+  .website-name {
+    font-size: 0.7em;
+    width: 100% !important;
+    margin-top: 5px;
+    margin-bottom: -9px !important;
+  }
+  .font-size-top {
+    font-size: 0.7em;
+  }
+  .ic_edit_order {
+    width: 15px;
+    height: 15px;
+  }
+  .info-customer {
+    padding: 0px 5px;
+    margin-top: -15px;
+  }
+  .form-group label,
+  .form-group-note label {
+    font-size: 0.7em;
+  }
+  .form-group {
+    margin-top: 5px !important;
+  }
+  .form-control {
+    font-size: 0.6em;
+    padding: 0px 5px;
+  }
+  .form-group-note {
+    margin-top: 5px !important;
+  }
+  .form-group-note .form-control-note {
+    font-size: 0.7em !important;
+    padding: 2px 5px;
+    height: auto;
+  }
+  .form-group-note textarea::placeholder {
+    font-size: 0.9em !important;
+  }
+  .form-group-note textarea {
+    font-size: 0.7em !important;
+  }
+  .form-group-voucher {
+    margin-top: 0 !important;
+  }
+  .form-group-voucher input::placeholder {
+    font-size: 0.9em !important;
+    color: #888;
+  }
+  .form-group-voucher input {
+    font-size: 0.7em !important;
+    height: auto;
+  }
+  .form-group-voucher .form-control-coupon {
+    padding: 0px 5px;
+    margin-top: 0px !important;
+  }
+  .form-group-voucher button {
+    font-size: 0.5em;
+  }
+  .payment-method {
+    margin-top: 15px !important;
+  }
+  .payment-method h5 {
+    font-size: 0.8em;
+  }
+  .form-check {
+    font-size: 0.7em;
+  }
+  .button-go-to-cart button {
+    padding: 2px 5px;
+    font-size: 0.7em;
+  }
+  .button-go-to-cart {
+    margin-top: -25px;
+  }
+  .offset-1 {
+    margin: 15px auto;
+  }
+  .name-product-order,
+  .price-checkout {
+    font-size: 0.7em;
+  }
+  .name-product-order {
+  }
+  .container-xxl {
+    padding: 0;
+  }
+  .check-out-img {
+    height: 50px;
+  }
+  .checkout-badge {
+    width: 15px;
+    height: 15px;
+
+  }
+  .text-quantity {
+    font-size: 0.7em;
+    width: 15px !important;
+    height: 15px;
+    margin-top: -4px;
+    margin-left: -7px;
+  }
+  .name-product {
+    margin-top: 2px;
+    font-size: 0.8em;
+    width: 7rem;
+  }
+  .total-price-one {
+    font-size: 0.8em;
+    margin-top: 7px;
+  }
+  .price-of-product {
+    font-size: 0.8em;
+    margin: 2px 0px !important;
+    width: 100%;
+  }
+  .total-price-end h4,
+  .total-price-end h5 {
+    font-size: 0.7em;
+  }
+  .total-coupon h4,
+  .total-coupon h5 {
+    font-size: 0.7em;
+  }
+  .total-amount h4,
+  .total-amount h5 {
+    font-size: 0.7em;
+  }
+  .total-amount {
+    padding: 0px 3px !important;
+  }
+  .button-order {
+    margin: 8px 0px!important;
+  }
+  .button-order button {
+    font-size: 0.7em;
+    padding: 5px 10px !important;
+  }
+  .checkout-wrapper {
+    padding: 0px 0px !important;
+  }
+}
+
+@media (max-width: 480px) {
+  .general-order {
+    flex-direction: column;
+    align-items: stretch;
+    margin: auto;
+  }
+  .col-5,
+  .col-6 {
+    width: 100%;
+  }
+  .checkout-form-wrapper {
+    padding: 3px 5px !important;
+  }
+  .website-name {
+    font-size: 0.7em;
+    width: 100% !important;
+    margin-top: 5px;
+    margin-bottom: -9px !important;
+  }
+  .font-size-top {
+    font-size: 0.7em;
+  }
+  .ic_edit_order {
+    width: 15px;
+    height: 15px;
+  }
+  .info-customer {
+    padding: 0px 5px;
+    margin-top: -15px;
+  }
+  .form-group label,
+  .form-group-note label {
+    font-size: 0.7em;
+  }
+  .form-group {
+    margin-top: 5px !important;
+  }
+  .form-control {
+    font-size: 0.6em;
+    padding: 0px 5px;
+  }
+  .form-group-note {
+    margin-top: 5px !important;
+  }
+  .form-group-note .form-control-note {
+    font-size: 0.7em !important;
+    padding: 2px 5px;
+    height: auto;
+  }
+  .form-group-note textarea::placeholder {
+    font-size: 0.9em !important;
+  }
+  .form-group-note textarea {
+    font-size: 0.7em !important;
+  }
+  .form-group-voucher {
+    margin-top: 0 !important;
+  }
+  .form-group-voucher input::placeholder {
+    font-size: 0.9em !important;
+    color: #888;
+  }
+  .form-group-voucher input {
+    font-size: 0.7em !important;
+    height: auto;
+  }
+  .form-group-voucher .form-control-coupon {
+    padding: 0px 5px;
+    margin-top: 0px !important;
+  }
+  .form-group-voucher button {
+    font-size: 0.5em;
+  }
+  .payment-method {
+    margin-top: 15px !important;
+  }
+  .payment-method h5 {
+    font-size: 0.8em;
+  }
+  .form-check {
+    font-size: 0.7em;
+  }
+  .button-go-to-cart button {
+    padding: 2px 5px;
+    font-size: 0.7em;
+  }
+  .button-go-to-cart {
+    margin-top: -25px;
+  }
+  .offset-1 {
+    margin: 15px auto;
+  }
+  .name-product-order,
+  .price-checkout {
+    font-size: 0.7em;
+  }
+  .name-product-order {
+  }
+  .container-xxl {
+    padding: 0;
+  }
+  .check-out-img {
+    height: auto;
+  }
+  .checkout-badge {
+    width: 15px;
+    height: 15px;
+  }
+  .text-quantity {
+    font-size: 0.7em;
+    width: 15px !important;
+    height: 15px;
+    margin-top: -4px;
+    margin-left: -7px;
+  }
+  .name-product {
+    margin-top: 0;
+    font-size: 0.8em;
+    width: 3rem;
+    padding-top: 2px !important;
+  }
+  .total-price-one {
+    font-size: 0.8em;
+    padding: 0px 0px !important;
+  }
+  .price-of-product {
+    font-size: 0.8em;
+    padding-top: 0 !important;
+    margin: 2px 0px !important;
+    width: 100%;
+  }
+  .total-price-end h4,
+  .total-price-end h5 {
+    font-size: 0.7em;
+  }
+  .total-coupon h4,
+  .total-coupon h5 {
+    font-size: 0.7em;
+  }
+  .total-amount h4,
+  .total-amount h5 {
+    font-size: 0.7em;
+  }
+  .total-amount {
+    padding: 0px 3px !important;
+  }
+  .button-order {
+    margin: 8px 0px!important;
+  }
+  .button-order button {
+    font-size: 0.7em;
+    padding: 5px 10px !important;
+  }
+  .checkout-wrapper {
+    padding: 0px 0px !important;
+  }
 }
 
 @media (max-width: 320px) {
