--- a/src/components/forget/ForgetPass.css
+++ b/src/components/forget/ForgetPass.css
@@ -1,207 +1,140 @@
-.login {
-    position: fixed;
-    z-index: 1001;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #00000090;
-    display: grid;
-  }
-  
-  .login-container {
-    place-self: center;
-    width: max(23vw, 330px);
-    color: #808080;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
-    padding: 25px 30px;
-    border-radius: 8px;
-    font-size: 14px;
-    animation: fadeIn 0.5s;
-  }
-  
-  .login-title {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: black;
-  }
-  
-  .login-title .icon-closeicon-close {
-    cursor: pointer;
-  }
-  
-  .login-title .icon-closeicon-close:hover {
-    color: tomato;
-  }
-  
-  .login-title .icon-closeicon-close:hover {
-    color: black;
-  }
-  
-  .login-input {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-  }
-  
-  .login-input input {
-    width: 100%;
-    outline: none;
-    border: 1px solid #d2d2d2;
-    padding: 10px;
-    border-radius: 4px;
-  }
-  
-  .login-input input:focus {
-    border: 1px solid tomato;
-  }
-  
-  .login-input .login-password {
-    position: relative;
-    width: 100%;
-  }
-  
-  .login-input .login-password .login_ic_eye {
-    position: absolute;
-  }
-  
-  .login-container .login-button {
-    border: none;
-    padding: 10px;
-    border-radius: 4px;
-    color: white;
-    background-color: tomato;
-    font-size: 0.9rem;
-    cursor: pointer;
-  }
-  
-  .login-condition {
-    display: flex;
-    align-items: start;
-    gap: 8px;
-    margin-top: -15px;
-  }
-  
-  .login-condition input {
-    margin-top: 5px;
-  }
-  
-  .part-end-login p {
-    margin-bottom: 0px;
-  }
-  
-  .part-end-login p span {
-    color: tomato;
-    font-weight: 500;
-    cursor: pointer;
-  }
-  
-  .part-end-login p span:hover {
-    color: rgb(255, 148, 129);
-  }
-  
-  .login-password input {
-    width: 100%;
-    padding-right: 2.5rem;
-  }
-  
-  .login_ic_eye {
-    position: absolute;
-    right: 10px;
-    top: 50%;
-    transform: translateY(-50%);
-    cursor: pointer;
-    color: #666;
-  }
-  
-  .button-login button {
-    width: 100%;
-  }
-  
-  .button-login .login-button:hover {
-    background-color: rgb(255, 148, 129);
-  }
-  
-  .forgot-pass {
-    margin-top: -25px;
-  }
-  
-  .forgot-pass p {
-    color: black;
-    font-size: 500;
-    width: fit-content;
-    margin-left: auto;
-  }
-  
-  .forgot-pass p:hover {
-    color: rgb(61, 190, 255);
-    cursor: pointer;
-  }
-  
-  .part-end-login {
-    margin-top: -25px;
-  }
-  
-  .button-google {
-    background: linear-gradient(55deg, #4285F4, #34A853, tomato); /* Các màu của Google */
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    font-size: 0.9rem;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .button-google:hover {
-    background: linear-gradient(55deg, tomato, #0A9F49, #4285F4); /* Thay đổi màu khi hover */
-    color: #fff; /* Màu chữ vẫn trắng khi hover */
-  }
+.forgot-password-container {
+  animation: fadeIn 0.5s;
+}
 
+.forgot-password-button {
+  padding: 5px !important;
+}
 
-  .forgot-password {
-    background-color: rgba(0, 0, 0, 0.5);  /* Dim background */
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1002;  /* Higher than other components */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
+.forgot-pass {
+  margin-top: -25px;
+}
+
+.forgot-pass p {
+  color: black;
+  font-size: 500;
+  width: fit-content;
+  margin-left: auto;
+}
+
+.forgot-pass p:hover {
+  color: rgb(61, 190, 255);
+  cursor: pointer;
+}
+
+.button-google {
+  background: linear-gradient(
+    55deg,
+    #4285f4,
+    #34a853,
+    tomato
+  ); /* Các màu của Google */
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 0.9rem;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.button-google:hover {
+  background: linear-gradient(55deg, tomato, #0a9f49, #4285f4);
+  color: #fff;
+}
+
+.forgot-password {
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1002;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.forgot-password-container {
+  background-color: white;
+  padding: 20px;
+  border-radius: 8px;
+  width: 100%;
+  max-width: 400px; /* Adjust as needed */
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.forgot-password-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.forgot-password-button {
+  background-color: tomato;
+  color: white;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.forgot-password-button:hover {
+  background-color: rgb(255, 148, 129);
+}
+
+.forgot-password-input {
+  width: 100%;
+}
+
+.forgot-password-input input {
+  width: 100%;
+  padding: 5px 10px;
+  font-size: 0.8em;
+  border: 1px solid rgb(181, 181, 181);
+  border-radius: 5px;
+}
+
+.forgot-password-input input:focus {
+  border: 1px solid tomato !important;
+  outline: none;
+}
+
+.part-end-forgot p span {
+  color: tomato;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.part-end-forgot p {
+  font-size: 0.9em;
+  margin-bottom: -10px !important;
+}
+
+.forgot-password-button {
+  font-size: 0.9em;
+}
+
+@media (max-width: 480px) {
   .forgot-password-container {
-    background-color: white;
-    padding: 20px;
-    border-radius: 8px;
-    width: 100%;
-    max-width: 400px;  /* Adjust as needed */
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
+    width: max(20vw, 250px) !important;
+    font-size: 0.6em !important;
   }
-  
-  .forgot-password-title {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  .forgot-password-title h2 {
+    font-size: 16px;
   }
-  
-  .forgot-password-button {
-    background-color: tomato;
-    color: white;
-    padding: 10px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
+  .forgot-password-input {
+    margin-top: -5px;
   }
-  
-  .forgot-password-button:hover {
-    background-color: rgb(255, 148, 129);
+  .part-end-forgot p {
+    margin-top: -3px;
   }
-  
+}
+
+@media (max-width: 320px) {
+  .forgot-password-container {
+    width: max(20vw, 230px) !important;
+  }
+}
