--- a/src/components/sign_up/Sign_up.css
+++ b/src/components/sign_up/Sign_up.css
@@ -147,3 +147,44 @@
 .info-register button:hover {
   background-color: rgb(255, 148, 129);
 }
+
+@media (max-width: 800px) {
+  .sign-up_ic_eye {
+    margin-top: 2px;
+  }
+  .part-end-sign-up {
+    margin-bottom: 10px;
+    margin-top: -8px;
+  }
+}
+
+@media (max-width: 480px) {
+  .sign-up-container {
+    width: max(20vw, 250px) !important;
+    font-size: 0.6em !important;
+  }
+  .sign-up-title h2 {
+    font-size: 18px;
+  }
+  .sign-up-username {
+    margin-top: -15px;
+  }
+  .info-register button {
+    font-size: 0.9em;
+  }
+  .sign-up-input input {
+    padding: 5px !important;
+  }
+}
+
+@media (max-width:320px){
+  .sign-up-container {
+    width: max(20vw, 230px) !important;
+  }
+  .info-register button {
+    padding: 8px !important;
+  }
+  .sign-up-title h2 {
+    font-size: 16px;
+  }
+}
