--- a/src/page/blog_detail/BlogDetail.css
+++ b/src/page/blog_detail/BlogDetail.css
@@ -239,7 +239,7 @@ body {
   font-weight: bold;
 }
 
-.comment-header img{
+.comment-header img {
   margin-bottom: 5px;
 }
 
@@ -255,27 +255,211 @@ body {
 }
 
 .comment-avatar {
-  width: 30px; /* Kích thước ảnh */
+  width: 30px;
   height: 30px;
-  border-radius: 50%; /* Làm tròn ảnh */
-  object-fit: cover; /* Đảm bảo ảnh không bị méo */
+  border-radius: 50%;
+  object-fit: cover;
 }
 
-@media (max-width: 768px) {
-  .blog-detail {
-    padding: 10px;
+@media (max-width: 1024px) {
+  .ic_back {
+    width: 20px;
+    height: 20px;
   }
-}
-
-@media (max-width: 431px) {
-  .comment-user {
-    margin-left: 5px;
+  .blog-header h1 {
+    font-size: 2em;
   }
+  .p-font-size {
+    margin-bottom: 10px !important;
+  }
+  .blog-image {
+    width: 80%;
+    height: 250px;
+  }
+  .info-of-image {
+    font-size: 0.9em;
+    margin-top: 5px !important;
+  }
+  .blog-content h1 {
+    font-size: 1.3em;
+  }
+  .blog-content p {
+    font-size: 0.9em;
+  }
+  .blog-content h2 {
+    font-size: 1.1em;
+  }
+  .blog-content ol,
+  .blog-content ul,
+  .blog-content li {
+    font-size: 0.9em;
+  }
+  .blog-content h1 {
+    margin-top: 5px !important;
+  }
+  .tags span strong {
+    font-size: 0.9em;
+  }
+  .comment-title {
+    font-size: 0.9em;
+  }
+  .comment-input textarea {
+    padding: 5px;
+    font-size: 0.9em;
+  }
+  .comment-input button {
+    padding: 5px 15px;
+    font-size: 0.8em;
+  }
+  .comment-tabs span,
+  .comment-user,
+  .comment-content,
   .comment-time {
     font-size: 0.9em;
   }
-  .ic_back{
-    width: 18px;
-    margin-left: -30px;
+}
+
+@media (max-width: 800px) {
+  .ic_back {
+    width: 15px;
+    height: 15px;
+  }
+  .blog-header h1 {
+    font-size: 1.8em;
+  }
+  .blog-header p {
+    font-size: 0.9em;
+  }
+  .blog-image {
+    width: 100%;
+    height: 200px;
+  }
+  .info-of-image {
+    font-size: 0.9em;
+    margin-top: 5px !important;
+  }
+  .blog-content h1 {
+    font-size: 1.1em;
+  }
+  .blog-content p {
+    font-size: 0.7em;
+  }
+  .blog-content h2 {
+    font-size: 0.9em;
+  }
+  .blog-content ol,
+  .blog-content ul,
+  .blog-content li {
+    font-size: 0.7em;
+  }
+  .tags span strong {
+    font-size: 0.7em;
+  }
+  .comment-title {
+    font-size: 0.7em;
+  }
+  .comment-input textarea {
+    padding: 5px;
+    font-size: 0.7em;
+  }
+  .comment-input button {
+    font-size: 0.7em;
+  }
+  .comment-tabs span,
+  .comment-user,
+  .comment-content,
+  .comment-time {
+    font-size: 0.7em;
+  }
+  .comment-user {
+    margin-left: 10px;
+  }
+  .tags .tag {
+    padding: 2px 5px;
+  }
+}
+
+@media (max-width: 600px) {
+  .container-bg a {
+    padding: 15px !important;
+  }
+}
+
+@media (max-width: 480px) {
+  .blog-detail {
+    padding: 10px;
+  }
+  .comment-header {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+  }
+  .blog-header h1 {
+    font-size: 1.3em;
+  }
+  .blog-header p {
+    font-size: 0.7em;
+  }
+  .blog-image {
+    height: 120px;
+  }
+  .info-of-image {
+    font-size: 0.8em;
+    margin-top: 5px !important;
+  }
+  .blog-content h1 {
+    font-size: 1em;
+    margin: 3px;
+  }
+  .blog-content {
+    margin: 3px !important;
+  }
+  .blog-content p {
+    font-size: 0.7em;
+  }
+  .blog-content h2 {
+    font-size: 0.8em;
+  }
+  .blog-content ul, .blog-content ol {
+    margin-left: 0px !important;
+  }
+  .blog-content ol,
+  .blog-content ul,
+  .blog-content li {
+    font-size: 0.7em;
+  }
+  .related-products {
+    margin-top: 10px !important;
+  }
+  .tags span strong {
+    font-size: 0.7em;
+  }
+  .comment-title {
+    font-size: 0.7em;
+  }
+  .comment-input textarea {
+    padding: 5px;
+    font-size: 0.7em;
+  }
+  .comment-input button {
+    font-size: 0.7em;
+  }
+  .comment-tabs span,
+  .comment-user,
+  .comment-content,
+  .comment-time {
+    font-size: 0.6em;
+  }
+  .comment-time {
+    width: 100%;
+    margin-top: -15px !important;
+    justify-content: end;
+  }
+  .comment-user {
+    margin-left: 5px;
+    height: 15px;
+  }
+  .tags .tag {
+    padding: 2px 5px;
   }
 }
