--- a/src/page/cart/Cart.css
+++ b/src/page/cart/Cart.css
@@ -203,7 +203,7 @@
   .title-info {
     padding-left: 5px;
   }
-  .text-center {
+  .input-change-quantity-cart {
     width: 15px !important;
   }
   .input-quantity{
