--- a/src/page/edit_profile/EditProfile.css
+++ b/src/page/edit_profile/EditProfile.css
@@ -171,28 +171,25 @@
   border-color: tomato;
 }
 
-
-/* Overlay for the OTP popup (centered on the screen) */
 .otp-popup-overlay {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  background-color: rgba(0, 0, 0, 0.5);
   display: flex;
-  justify-content: center; /* Horizontally center the content */
-  align-items: center; /* Vertically center the content */
-  z-index: 1000; /* Ensure it's on top of other content */
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
 }
 
-/* OTP popup panel itself */
 .otp-popup {
   background-color: white;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  width: 300px; /* Width of the OTP popup */
+  width: 300px;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -242,7 +239,148 @@
   box-shadow: 0 0 0 3px rgba(244, 67, 54, 0.5);
 }
 
-
 .otp-popup button + button {
   margin-top: 10px;
+}
+
+@media (max-width:800px) {
+  .edit-profile-avatar {
+    width: 100px;
+    height: 100px;
+  }
+  .bg-img {
+    width: 25px;
+    height: 25px;
+    margin-top: 65px;
+    margin-right: 20px;
+  }
+  .ic_pen {
+    margin-left: 5px;
+    margin-bottom: 9px !important;
+    width: 13px;
+    height: 13px;
+  }
+  .tabs button {
+    font-size: 0.7em;
+    font-weight: 500;
+    padding: 4px 25px;
+  }
+  .input-container p, .input-wrapper input{
+    font-size: 0.7em;
+  }
+  .edit-profile-info-big {
+    margin-top: 5px !important;
+  }
+  .bt-edit-profile, .bt-cancel-profile {
+    font-size: 0.7em;
+  }
+  .text-or {
+    font-size: 0.7em !important;
+  }
+  .icon-eye-password {
+    width: 15px;
+    height: 15px;
+  }
+}
+
+@media (max-width:600px) {
+  .edit-profile-avatar {
+    height: 90px;
+    border: 3px solid rgb(15, 175, 0);
+  }
+  .tabs button {
+    padding: 4px 15px;
+  }
+}
+
+@media (max-width:480px) {
+  .edit-profile-header {
+    height: 70px;
+    width: 70px;
+  }
+  .edit-profile-avatar {
+    height: 70px;
+  }
+  .bg-img {
+    width: 20px;
+    height: 20px;
+    margin-top: 45px;
+    margin-right: 30px;
+  }
+  .ic_pen {
+    margin-left: 4px;
+    margin-bottom: 12px !important;
+    width: 10px;
+    height: 10px;
+  }
+  .tabs {
+    margin-top: 15px !important;
+  }
+  .tabs button {
+    font-size: 0.5em;
+    padding: 4px 5px !important;
+    width: 45vw !important;
+  }
+  .input-container p, .input-wrapper input{
+    font-size: 0.6em;
+  }
+  .edit-profile-info-big {
+    margin-top: 0px !important;
+  }
+  .input-wrapper input {
+    padding: 3px 5px;
+  }
+  .text-or {
+    font-size: 0.6em !important;
+    width: 100% !important;
+  }
+  .bt-edit-profile, .bt-cancel-profile {
+    font-size: 0.6em;
+  }
+  .icon-eye-password {
+    width: 12px;
+    margin-top: 1px;
+    right: 5px;
+  }
+}
+
+@media (max-width:320px){
+  .edit-profile-header {
+    height: 65px;
+    width: 60px;
+  }
+  .edit-profile-avatar {
+    height: 60px;
+  }
+  .bg-img {
+    margin-top: 40px;
+    margin-right: 38px;
+  }
+  .tabs {
+    margin-top: 7px !important;
+  }
+  .tabs button {
+    font-size: 0.4em;
+    padding: 3px!important;
+  }
+  .input-container p, .input-wrapper input{
+    font-size: 0.4em;
+  }
+  .text-or {
+    font-size: 0.5em !important;
+  }
+  .bt-edit-profile, .bt-cancel-profile {
+    font-size: 0.5em;
+  }
+  .icon-eye-password {
+    width: 10px;
+    margin-top: 2px;
+    right: 5px;
+  }
+  .bt-edit-profile, .bt-cancel-profile {
+    font-size: 0.5em !important;
+  }
+  .bt-edit-profile {
+    margin-top: -25px !important;
+  }
 }
